--- a/emojipicker/composer.json
+++ b/emojipicker/composer.json
@@ -3,8 +3,8 @@
 	"type": "phpbb-extension",
 	"description": "Adds the Emoji picker to the posting page and signature preview page.",
 	"homepage": "https://vinabb.vn/",
-	"version": "0.1.1",
-	"time": "2017-01-07",
+	"version": "0.1.2",
+	"time": "2017-01-11",
 	"license": "GPL-2.0",
 	"authors": [{
 		"name": "Khoa Nguyen",
@@ -23,7 +23,7 @@
 	"extra": {
 		"display-name": "Emoji Picker",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.1.0,<3.2.0@dev"
+			"phpbb/phpbb": ">=3.1.3-RC1,<3.2.0@dev"
 		},
 		"version-check": {
 			"host": "raw.githubusercontent.com",
