--- a/happyanniversaryemail/composer.json
+++ b/happyanniversaryemail/composer.json
@@ -13,7 +13,7 @@
 		"role": "Developer"
 	}],
 	"require": {
-		"php": ">=5.3.3",
+		"php": ">=5.4",
 		"composer/installers": "~1.0"
 	},
 	"require-dev": {
@@ -22,7 +22,7 @@
 	"extra": {
 		"display-name": "Happy Anniversary (Email Edition)",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.1.0,<3.3.0@dev"
+			"phpbb/phpbb": ">=3.2.0-RC1,<3.3.0@dev"
 		},
 		"version-check": {
 			"host": "raw.githubusercontent.com",
