--- a/timestop/composer.json
+++ b/timestop/composer.json
@@ -22,6 +22,12 @@
 		"display-name": "Time Stop",
 		"soft-require": {
 			"phpbb/phpbb": ">=3.2.0-b1,<3.3"
+		},
+		"version-check": {
+			"host": "raw.githubusercontent.com",
+			"directory": "/VinaBB/phpBB.Extensions/master/update",
+			"filename": "timestop.json",
+			"ssl": true
 		}
 	}
 }
